# simple-todo-app

./: .eslintcache  BUILD.bazel  WORKSPACE  package-lock.json  package.json
my_workspace/: WORKSPACE.bazel
src/: App.tsx  BUILD.bazel  TodoList.tsx  index.css
src/components/: BUILD.bazel  Chat.tsx  NewTodo.tsx  TodoList.tsx
