package(default_visibility = ["//visibility:public"])

exports_files([
  "tsconfig.json",
])

filegroup(
    name = "node_modules",
    srcs = glob([
        "node_modules/@airyhq/components/**",
        "node_modules/@testing-library/jest-dom/**",
        "node_modules/@testing-library/react/**",
        "node_modules/@testing-library/user-event/**",
        "node_modules/@types/jest/**",
        "node_modules/@types/node/**",
        "node_modules/@types/react/**",
        "node_modules/@types/react-dom/**",
        "node_modules/@types/react-router-dom/**",
        "node_modules/node-sass/**",
        "node_modules/react/**",
        "node_modules/react-dom/**",
        "node_modules/react-redux/**",
        "node_modules/react-scripts/**",
        "node_modules/redux/**",
        "node_modules/redux-thunk/**",
        "node_modules/typescript/**",
        "node_modules/web-vitals/**",
        
    ]),
)