package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")


ts_library(
    name = "src",
    srcs = ["App.tsx", "index.tsx, index.css"],
    tsconfig = "//:tsconfig.json",
    deps = [
      "@npm//@types/react",
       "@npm//react",
       "@npm//react-dom"
       
    ]
)

